# DigitalCo

./: .gitignore  Inventory.xlsx  README.md  index.html  manifest.webmanifest  package-lock.json  package.json  styles.css  sw.js  tsconfig.base.json  wrangler.jsonc
apps/desk/: index.html  package.json
apps/desk/src/: main.tsx
apps/desk/src-tauri/: Cargo.toml  tauri.conf.json
apps/desk/src-tauri/src/: main.rs
apps/desk/src/lib/: constants.ts  recommendation.ts
apps/desk/src/services/: convexApi.ts  excel.ts  fileBridge.ts  report.ts
apps/desk/src/types/: inventory.ts
apps/desk/src/ui/: App.tsx  styles.css
convex/: inventory.ts  package.json  schema.ts
convex/_generated/: api.d.ts
src/: app.js
